<resources>
    <string name="app_name">Florida Services</string>
    <string name="todo">TODO</string>
    <string name="HOST">http://floridaservices.cf</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo">Correo: </string>
    <string name="contrasena">Contraseña: </string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="estudiante">Estudiante</string>
    <string name="registrarse">Registrarse</string>
    <string name="c_digo_de_profesor">Código de profesor:</string>
    <string name="profesor">Profesor</string>
    <string name="tipo_de_usuario">Tipo de usuario: </string>
    <string name="email">Email: </string>
    <string name="tel_fono">Teléfono: </string>
    <string name="nombre">Nombre: </string>
    <string name="apellidos">Apellidos: </string>
    <string name="OBJETO_PERSONA">user</string>
    <string name="dni">DNI: </string>
    <string name="contrasenya">Contraseña:</string>
    <string name="parking">Parking</string>
    <string name="bilbioteca">Biblioteca</string>
    <string name="peceras">Peceras</string>
    <string name="florida_oberta">Florida Oberta</string>
    <string name="pabellon">Pabellón</string>
    <string name="reserva_aulas">Reserva de Aulas</string>
    <string name="empty_user">El usuario está vacio</string>
    <string name="empty_password">La contraseña está vacia</string>
    <string name="permisos_camara">Esta aplicación necesita acceder a la cámara para funcionar</string>
    <string name="titulo_dialog_registro">Escanea tu carnet de Florida</string>
    <string name="contenido_dialog_registro">Para facilitar el registro, sólo debes leer el código QR y el código de Barras de tu carnet:</string>
    <string name="boton_escanear_dialog_registro">Escanear</string>
    <string name="boton_manual_dialog_registro">Introducir manualmente</string>
    <string name="error_dni">Se necesita un DNI válido para registrarse</string>
    <string name="error_nombre">No puedes dejar el nombre en blanco</string>
    <string name="error_apellidos">No puedes dejar los apellidos en blanco</string>
    <string name="empty_email">El correo está vacio</string>
    <string name="empty_telefono">Se necesita un teléfono de contacto para registrarse</string>
    <string name="error_email">El correo introducido no es válido</string>
    <string name="error_password">Contraseña demasiado corta, almenos 6 caracteres</string>
    <string name="error_registro">Error en el registro. Revise los datos introducidos</string>
    <string name="error_login">Usuario o contraseña incorrectos</string>
    <string name="registro_ok">Usuario registrado correctamente</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="sala_n9">SALA\n9</string>
    <string name="sala_n10">SALA\n10</string>
    <string name="sala_n5">SALA\n5</string>
    <string name="sala_n14">SALA\n14</string>
    <string name="sala_n11">SALA\n11</string>
    <string name="sala_n12">SALA\n12</string>
    <string name="sala_n13">SALA\n13</string>
    <string name="sala_n7">SALA\n7</string>
    <string name="sala_n8">SALA\n8</string>
    <string name="sala_n3">SALA\n3</string>
    <string name="sala_n6">SALA\n6</string>
    <string name="sala_n4">SALA\n4</string>
    <string name="sala_n1">SALA\n1</string>
    <string name="sala_n2">SALA\n2</string>
    <string name="sala_n15">SALA\n15</string>
    <string name="titulo_dialog_pecera_ocupada">Esta pecera está ocupada</string>
    <string name="contenido_dialog_pecera_ocupada_usuario">Pecera actualmente ocupada por: \n\n</string>
    <string name="contenido_dialog_pecera_ocupada_tiempofin">\n\nEstará libre aproximadamente a las: \n\n</string>
    <string name="boton_ok_dialog_pecera_ocupada">OK</string>
    <string name="titulo_dialog_abandonar_pecera">¿Desea abandonar la pecera?</string>
    <string name="boton_dialog_pecera_abandonar">Abandonar</string>
    <string name="boton_dialog_pecera_cancelar">Cancelar</string>
    <string name="titulo_dialog_reservar_pecera">¿Desea reservar esta pecera?\n</string>
    <string name="boton_dialog_pecera_reservar">Reservar</string>
    <string name="mensaje_reserva_pecera">Seleccione el tiempo de la reserva:\n</string>
    <string name="error_ya_tienes_pecera">Ya tienes una pecera ocupada</string>
    <string name="resumen_de_servicios">Resumen de servicios</string>
    <string name="plazas_de_aparcamiento_disponibles">Plazas de aparcamiento disponibles:</string>

    <string name="peceras_disponibles">Peceras disponibles:</string>


</resources>
