<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.home_fragment"
    android:background="@drawable/edificiosred">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg_rounded"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/home_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/resumen_de_servicios"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:background="@drawable/layout_bg_rounded">
            <TextView
                android:id="@+id/title_parking_home"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/plazas_de_aparcamiento_disponibles"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/home_resumen_plazas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:background="@drawable/layout_bg_rounded"
                android:gravity="center"
                android:textAlignment="center" />

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:background="@drawable/layout_bg_rounded">
            <TextView
                android:id="@+id/title_peceras_home"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/peceras_disponibles"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/home_resumen_peceras"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/layout_bg_rounded"
                android:gravity="center"
                android:textAlignment="center" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
    </LinearLayout>

</FrameLayout>